# ai-car-assistant

./: .gitignore  README.md  env.example  pyproject.toml
src/: app.py  prompts.py
