[tool.poetry]
name = "ai-car-assistant"
version = "0.1.0"
description = ""
authors = ["Daniel B"]
readme = "README.md"
package-mode = false
packages = []

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
chainlit = "^2.2.1"
flake8 = "^7.1.2"
openai = "^1.64.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
